--- a/src/styles.css
+++ b/src/styles.css
@@ -411,6 +411,11 @@ body > main > ul.tasks > li.task > form.due-date.show {
 
 body > main > ul.tasks > li.task > form.due-date > button {
    outline-offset: 4px;
+   transition: opacity 150ms;
+}
+
+body > main > ul.tasks > li.task > form.due-date > button:active {
+   opacity: 60%;
 }
 
 body > main > ul.tasks > li.add-task {
